# yostlabs_3space_imu

./: CMakeLists.txt  README.md  package.xml
config/: calibration_comments.yaml  comments.yaml  imu.yaml  imu_backup.yaml
config/rviz/: imu.rviz
launch/: imu.launch
libs/YEI_3-Space_Python_API_2.0.2.3_Src_19Jun2014/examples/: get_batch_data.py
other/: manuals.txt
other/legacy/: imu_api_node.py
perspective/: EMA_IMU.perspective
scripts/: imu_noapi_node .py  imu_node.py  imu_serial.py  imu_teste_node.py
scripts/ema/libs/: yei
scripts/ema/modules/: imu.py  original_imu.py
scripts/modules/: imu.py
