<?xml version="1.0"?>
<package>
  <name>yostlabs_3space_imu</name>
  <version>0.1.0</version>
  <description>The yostlabs_3space_imu package</description>

  <maintainer email="george.brindeiro@gmail.com">George Brindeiro</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <url type="website">https://github.com/lara-unb/yostlabs_3space_imu</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
